fix parsing bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,18 @@ set(files
   )
 
 unset(CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES)
-add_executable(quack ${main} ${files})
+add_executable(quack-exe ${main})
+add_library(quack ${files})
 
+set_target_properties(quack-exe PROPERTIES OUTPUT_NAME quack)
 set_target_properties(quack PROPERTIES C_STANDARD 99)
-target_link_libraries(quack readline gccjit)
+set_target_properties(quack-exe PROPERTIES C_STANDARD 99)
+target_link_libraries(quack gccjit)
+target_link_libraries(quack-exe readline quack)
 target_compile_options(quack PRIVATE -Wall -Wextra)
+target_compile_options(quack-exe PRIVATE -Wall -Wextra)
 target_compile_features(quack PRIVATE cxx_std_17)
-add_executable( quack-tests t/test_main.cpp ${files})
-target_link_libraries(quack-tests gtest gtest_main gccjit)
+add_executable( quack-tests t/test_main.cpp)
+target_link_libraries(quack-tests gtest gtest_main gccjit quack)
 gtest_discover_tests(quack-tests)
 include_directories("src/" "/usr/lib/gcc/x86_64-linux-gnu/12/include/ ")
